Rename app to Vibree and implement new premium UI with Jetpack Compose

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">WearableCollector</string>
+    <string name="app_name">Vibree</string>
     <string name="scan">Scan</string>
     <string name="stop">Stop</string>
     <string name="unknown_device">Unknown Device</string>
