Feat: Major Update Features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="unknown_device">Unknown Device</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
+    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
 </resources>
