Add signingReport to CI layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="unknown_device">Unknown Device</string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
-    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
+    <string name="default_web_client_id">1084169848188-m3bf8ni00o193sgih7q66pth1j305cso.apps.googleusercontent.com</string>
 </resources>
